--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "2.30.1",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
+    "ngx-flexible-layout": "16.0.1",
     "@angular/router": "^16.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
