--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "ngx-flexible-layout": "16.0.1",
     "@angular/router": "^16.2.0",
+    "chart.js": "4.4.3",
+    "ng2-pdf-viewer": "10.2.2",
+    "pdfjs-dist": "4.5.136",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
