--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chart.js": "4.4.3",
     "ng2-pdf-viewer": "10.2.2",
     "pdfjs-dist": "4.5.136",
+    "@auth0/angular-jwt": "5.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
